--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"module": "./index.js",
 	"types": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"exec": "$@"
 	},
 	"repository": {
 		"type": "git",
