package.json: sorting

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
 	"module": "./index.js",
 	"types": "index.js",
 	"scripts": {
-		"exec": "$@",
-		"build": "npm run compile"
+		"build": "npm run compile",
+		"exec": "$@"
 	},
 	"devDependencies": {
 		"svelte": "~3.25.1"
