--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 		"exec": "$@"
 	},
 	"devDependencies": {
-		"svelte": "~3.25.1"
+		"svelte": "~3.25.1",
+		"typescript": "^4.0.3"
 	},
 	"publishConfig": {
 		"access": "public"
