--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/disqus",
-	"version": "1.0.73",
+	"version": "1.0.74",
 	"description": "ctx-core disqus integration",
 	"keywords": [
 		"ctx-core",
@@ -24,7 +24,7 @@
 		"exec": "$@"
 	},
 	"devDependencies": {
-		"svelte": "~3.25.1",
+		"svelte": "3.26.0",
 		"typescript": "^4.0.3"
 	},
 	"publishConfig": {
