--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/disqus",
-	"version": "2.0.12",
+	"version": "2.0.13",
 	"description": "ctx-core disqus integration",
 	"keywords": [
 		"ctx-core",
@@ -28,6 +28,7 @@
 		"typescript": "^4.2.3"
 	},
 	"publishConfig": {
-		"access": "public"
+		"access": "public",
+		"cache": "~/.npm"
 	}
 }
