--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/disqus",
-	"version": "2.1.1",
+	"version": "2.2.0",
 	"description": "ctx-core disqus integration",
 	"keywords": [
 		"ctx-core",
@@ -18,12 +18,16 @@
 	"author": "Brian Takita",
 	"main": "./dist/index.js",
 	"module": "./dist/index.js",
-	"types": "./types/index.d.ts",
+	"types": "./dist/index.d.ts",
 	"scripts": {
-		"build": "npm run compile",
+		"build": "npm run clean && npm run compile && npm run symlink",
+		"clean": "rm -f tsconfig.tsbuildinfo",
+		"compile": "./node_modules/.bin/tsc -b .",
+		"symlink": "./node_modules/.bin/symlink_src_assets_to_dist .",
 		"exec": "$@"
 	},
 	"devDependencies": {
+		"@ctx-core/ctx-core-package-tools": "workspace:^6.4.0",
 		"svelte": "3.38.2",
 		"typescript": "^4.2.4"
 	},
