--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/disqus",
-	"version": "3.0.1",
+	"version": "3.0.2",
 	"description": "ctx-core disqus integration",
 	"keywords": [
 		"ctx-core",
@@ -21,13 +21,13 @@
 	"types": "./dist/index.d.ts",
 	"scripts": {
 		"build": "npm run clean && npm run compile && npm run symlink",
-		"clean": "rm -f tsconfig.tsbuildinfo",
+		"clean": "rm -f tsconfig.tsbuildinfo && rm -f dist/**/*.js && rm -f dist/**/*.d.ts && rm -f dist/**/*.map",
 		"compile": "./node_modules/.bin/tsc -b .",
 		"symlink": "./node_modules/.bin/symlink_src_assets_to_dist .",
 		"exec": "$@"
 	},
 	"devDependencies": {
-		"@ctx-core/ctx-core-package-tools": "workspace:^7.0.12",
+		"@ctx-core/ctx-core-package-tools": "workspace:^7.0.13",
 		"svelte": "3.38.2",
 		"typescript": "^4.3.2"
 	},
