--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/disqus",
-	"version": "5.0.3",
+	"version": "5.0.4",
 	"description": "ctx-core disqus integration",
 	"keywords": [
 		"ctx-core",
@@ -16,20 +16,24 @@
 	},
 	"license": "Apache-2.0",
 	"author": "Brian Takita",
-	"type": "module",
 	"main": "./dist/index.js",
 	"module": "./dist/index.js",
 	"types": "./dist/index.d.ts",
+	"exports": {
+		"require": "./dist/index.js",
+		"import": "./dist/index.mjs"
+	},
 	"scripts": {
-		"build": "npm run clean && npm run copy-components && npm run compile",
+		"build": "npm run clean && npm run copy-mjs && npm run copy-components && npm run compile",
 		"clean": "rm -f tsconfig.tsbuildinfo && rm -f src/**/*.js && rm -f src/**/*.d.ts && rm -f src/**/*.map",
 		"compile": "./node_modules/.bin/tsc -b .",
+		"copy-mjs": "cd dist && echo \"export * from './index.js'\" > index.mjs",
 		"copy-components": "cd src && find . | grep \\.svelte$ | awk '{print \"mkdir -p dirname \"$1\" && cp -f \"$1\" ../dist/\"$1}'",
 		"exec": "$@",
 		"prepublishOnly": "npm run build"
 	},
 	"devDependencies": {
-		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.27",
+		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.28",
 		"svelte": "3.38.3",
 		"typescript": "^4.3.5"
 	},
