--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/disqus",
-	"version": "5.0.68",
+	"version": "5.0.70",
 	"description": "ctx-core disqus integration",
 	"keywords": [
 		"ctx-core",
@@ -35,11 +35,11 @@
 		"prepublishOnly": "npm run clean && npm run build"
 	},
 	"devDependencies": {
-		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.78",
-		"@swc/cli": "^0.1.51",
-		"@swc/core": "^1.2.110",
-		"svelte": "3.44.1",
-		"typescript": "^4.5.2"
+		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.80",
+		"@swc/cli": "^0.1.52",
+		"@swc/core": "^1.2.113",
+		"svelte": "3.44.2",
+		"typescript": "next"
 	},
 	"publishConfig": {
 		"access": "public",
