--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ctx-core/disqus",
-	"version": "5.0.77",
+	"version": "5.0.78",
 	"description": "ctx-core disqus integration",
 	"keywords": [
 		"ctx-core",
@@ -32,12 +32,12 @@
 		"prepublishOnly": "npm run clean && npm run build"
 	},
 	"devDependencies": {
-		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.85",
+		"@ctx-core/ctx-core-package-tools": "workspace:^8.0.86",
 		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"@swc/cli": "^0.1.55",
 		"@swc/core": "^1.2.120",
-		"svelte": "3.44.2",
+		"svelte": "^3.44.3",
 		"svelte-preprocess": "^4.10.0",
 		"svelte2tsx": "^0.4.11",
 		"tslib": "^2.3.1",
