--- a/package.json
+++ b/package.json
@@ -43,5 +43,8 @@
 		"access": "public",
 		"cache": "~/.npm"
 	},
-	"sideEffects": false
+	"sideEffects": false,
+	"dependencies": {
+		"svelte": "^3.58.0"
+	}
 }
